--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -12,3 +12,17 @@
     height: 100%;
     object-fit:cover;
 }
+
+.HomeLogo{
+    isolation: isolate;
+    mix-blend-mode:multiply;
+    width: 100vw;
+    height:50vh;
+    object-fit: scale-down;
+}
+
+.Opening_Line{
+    color: white;
+    font-size:1.5rem;
+    background-color: rgb(235, 70, 70);
+}
