--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,7 +16,7 @@
 .HomeLogo{
     isolation: isolate;
     mix-blend-mode:multiply;
-    width: 100vw;
+    width: 100%;
     height:50vh;
     object-fit: scale-down;
 }
