--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -22,5 +22,11 @@ a.nav-link, a.navbar-brand{
 }
 
 #renderBox{
-  min-height: calc(100vh - 230px);;
+  min-height: calc(100vh - 230px);
+  display: flex;
+  flex-direction: column;
+align-items: center;}
+
+#innerRenderBox{
+  max-width: 1000px;
 }
