--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,17 +1,3 @@
-.backgroundImageWrapper{
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -100;
-}
-
-.backgroundImage{
-    width: 100%;
-    height: 100%;
-    object-fit:cover;
-}
 
 .HomeLogo{
     isolation: isolate;
@@ -25,4 +11,5 @@
     color: white;
     font-size:1.5rem;
     background-color: rgb(235, 70, 70);
+    padding: 5px;
 }
